--- a/web/src/drawer/drawer.html
+++ b/web/src/drawer/drawer.html
@@ -297,6 +297,7 @@
         <ghvz-drawer-item text="Admin Notifications" path='["adminNotifications"]' icon="notification:sms">
         </ghvz-drawer-item>
         <ghvz-drawer-item text="Admin Chats" path='["adminChats"]' icon="communication:chat"></ghvz-drawer-item>
+        <ghvz-drawer-item text="Admin Edit Rules" path='["adminEditRules"]' icon="list"></ghvz-drawer-item>
       </div>
     </template>
 
