--- a/web/src/help/help-page.html
+++ b/web/src/help/help-page.html
@@ -15,66 +15,78 @@
 -->
 
 <dom-module id="ghvz-help-page">
-<script>
-  // Not sure why this HTMLImports.whenReady is really needed.
-  // Something about polymer initialization order.
-  // I think we're not supposed to need this.
-  HTMLImports.whenReady(() => {
-    Polymer({
-      is: 'ghvz-help-page',
+  <script>
+    // Not sure why this HTMLImports.whenReady is really needed.
+    // Something about polymer initialization order.
+    // I think we're not supposed to need this.
+    HTMLImports.whenReady(() => {
+      Polymer({
+        is: 'ghvz-help-page',
 
-      properties: {
-      },
+        properties: {
+        },
 
-      listeners: {
-        'tap': 'captureTap_',
-      },
+        listeners: {
+          'tap': 'captureTap_',
+        },
 
-      captureTap_(e) {
-        if (e.target.classList.contains('link')) {
-          let path = e.target.dataset.path;
-          this.fire('ghvz-set-path', {
-            inGame: true,
-            path: path.split('/'),
-            replace: false,
-          });
-        }
-      },
+        captureTap_(e) {
+          if (e.target.classList.contains('link')) {
+            let path = e.target.dataset.path;
+            this.fire('ghvz-set-path', {
+              inGame: true,
+              path: path.split('/'),
+              replace: false,
+            });
+          }
+        },
 
+      });
     });
-  });
-</script>
-<style>
-  span.link, a {
-    color: #0277BD;
-    font-weight: 500;
-    text-decoration: none;
-  }
-  span.link:hover, a:hover {
-    text-decoration: underline;
-    cursor: pointer;
-  }
-  .youtube {
-    max-height: 24px;
-    margin-right: 4px;
-  }
-  .help-line {
-    line-height: 24px;
-    display: flex;
-  }
-</style>
-<template>
-  <ghvz-card spaced right padded>
-    <div class="header" name="Rules">Help</div>
-    <div class="help-line"><span class="link" data-path="rules">Game Rules</span></div>
-    <div class="help-line"><span class="link" data-path="faq">Frequently Asked Questions</span></div>
-    <div class="help-line"><img class="youtube" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/youtube-512.png"/><a href="https://www.youtube.com/watch?v=fAjS5frK4Vg" target="_blank">Intro: Registration</a></div>
-    <div class="help-line"><img class="youtube" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/youtube-512.png"/><a href="https://www.youtube.com/watch?v=1-eATdeLAHA" target="_blank">Intro: Mission Notification and Chat Features</a></div>
-    <div class="help-line"><img class="youtube" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/youtube-512.png"/><a href="https://www.youtube.com/watch?v=NXpssyB1-XE" target="_blank">Intro: Infection Procedures</a></div>
-    <div class="help-line"><img class="youtube" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/youtube-512.png"/><a href="https://www.youtube.com/watch?v=Cgl0W9A6bhk" target="_blank">Intro: Game Notifications, Admin Chat, and Rewards</a></div>
-  </ghvz-card>
-</template>
+  </script>
+  <style>
+    span.link,
+    a {
+      color: #0277BD;
+      font-weight: 500;
+      text-decoration: none;
+    }
+
+    span.link:hover,
+    a:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+
+    .youtube {
+      max-height: 24px;
+      margin-right: 4px;
+    }
+
+    .help-line {
+      line-height: 24px;
+      display: flex;
+    }
+  </style>
+  <template>
+    <ghvz-card spaced right padded>
+      <div slot="headerText" name="Rules">Help</div>
+      <div class="help-line"><span class="link" data-path="rules">Game Rules</span></div>
+      <div class="help-line"><span class="link" data-path="faq">Frequently Asked Questions</span></div>
+      <div class="help-line"><img class="youtube"
+          src="https://cdn1.iconfinder.com/data/icons/logotypes/32/youtube-512.png" /><a
+          href="https://www.youtube.com/watch?v=fAjS5frK4Vg" target="_blank">Intro: Registration</a></div>
+      <div class="help-line"><img class="youtube"
+          src="https://cdn1.iconfinder.com/data/icons/logotypes/32/youtube-512.png" /><a
+          href="https://www.youtube.com/watch?v=1-eATdeLAHA" target="_blank">Intro: Mission Notification and Chat
+          Features</a></div>
+      <div class="help-line"><img class="youtube"
+          src="https://cdn1.iconfinder.com/data/icons/logotypes/32/youtube-512.png" /><a
+          href="https://www.youtube.com/watch?v=NXpssyB1-XE" target="_blank">Intro: Infection Procedures</a></div>
+      <div class="help-line"><img class="youtube"
+          src="https://cdn1.iconfinder.com/data/icons/logotypes/32/youtube-512.png" /><a
+          href="https://www.youtube.com/watch?v=Cgl0W9A6bhk" target="_blank">Intro: Game Notifications, Admin Chat, and
+          Rewards</a></div>
+    </ghvz-card>
+  </template>
 </dom-module>
-
-
-
