--- a/web/src/profile/profile-page.html
+++ b/web/src/profile/profile-page.html
@@ -121,14 +121,9 @@
           });
         },
         giveReward_() {
-          console.error("Implement this...")
+          this.$.giveRewardDialog.open();
         },
         changePlayerAllegiance_() {
-          /*let self = this;
-          doTheThing = async function () {
-            self.fire('ghvz-open-dialog', { dialog: self.$.changeAllegianceDialog });
-          }
-          doTheThing();*/
           this.$.changeAllegianceDialog.open();
         },
         seePrivateInfo_(isAdmin, actingPlayerId, playerId) {
@@ -205,7 +200,7 @@
     }
 
     .alive .status {
-      color: fuchsia;
+      color: var(--alive_color);
     }
 
     .dead {
@@ -213,7 +208,7 @@
     }
 
     .dead .status {
-      color: forestgreen;
+      color: var(--dead_color);
     }
 
     .profile-info {
@@ -246,8 +241,8 @@
       margin-bottom: 16px;
     }
 
-    .divider.grey300 {
-      border-top: 1px solid #E0E0E0;
+    .divider {
+      border-top: 1px solid var(--grey300);
       padding-bottom: 16px;
     }
 
@@ -255,23 +250,22 @@
       width: 48px;
       height: 48px;
       position: relative;
-      color: #424242
+      color: var(--grey800)
     }
 
     .attribute {
       display: flex;
       flex-direction: row;
-      padding-top: 8px;
+      padding-top: 16px;
       padding-left: 16px;
     }
 
     .attribute-text {
-      color: #424242
+      color: var(--grey800)
     }
 
-    /* Grey500 */
     .attribute-text.old {
-      color: #9E9E9E
+      color: var(--grey500)
     }
 
     .attribute-header {
@@ -297,7 +291,7 @@
         </div>
       </div>
     </div>
-    <div class="divider grey300"></div>
+    <div class="divider"></div>
     <div id="playerAttributes">
       <div id="allegianceAttribute" class="attribute">
         <span class="material-icons-outlined grey800">outlined_flag</span>
@@ -314,7 +308,8 @@
               <div
                 class$="attribute-text attribute-header [[isLifeCodeActive_(lifeCodeObject)]] [[isLifeCodeOld_(index)]]">
                 [[lifeCodeObject.key]]</div>
-              <div class$="attribute-text [[isLifeCodeOld_(index)]]">[[getLifeCodeDescription_(index, lifeCodeObject)]]
+              <div class$="attribute-text [[isLifeCodeOld_(index)]]" style="padding-bottom: 8px;">
+                [[getLifeCodeDescription_(index, lifeCodeObject)]]
               </div>
             </template>
           </div>
@@ -333,7 +328,7 @@
     </template>
 
     <template is="dom-if" if="[[isAdmin]]">
-      <div class="divider grey300" style="margin-top: 16px;"></div>
+      <div class="divider" style="margin-top: 16px;"></div>
       <div id="details" class="attribute" style="flex-direction: column;">
         <div class="attribute-header">Admin Options:</div>
         <div style="padding-top: 8px; display: flex;">
@@ -352,5 +347,7 @@
 
     <ghvz-dialog-change-allegiance id="changeAllegianceDialog" bridge="[[bridge]]" game="[[game]]" player="[[player]]">
     </ghvz-dialog-change-allegiance>
+    <ghvz-dialog-give-reward id="giveRewardDialog" bridge="[[bridge]]" game="[[game]]" player="[[player]]">
+      </ghvz-dialog-give-rewarde>
   </template>
 </dom-module>
